testsuite/tests/polykinds/T16762c.stderr

T16762c.hs:11:3: error:
    • These kind and type variables: a k (b :: k)
      are out of dependency order. Perhaps try this ordering:
        k (a :: k) (b :: k)
    • In the definition of data constructor ‘MkT’
      In the data declaration for ‘T’
